refactor: enhance card layout and styling with new meta elements and color variables

--- a/card/front.html
+++ b/card/front.html
@@ -2,9 +2,11 @@
   <div class="example-sentence-container">
     <div class="example-sentence">{{cloze:ExampleSentence}}</div>
 
-    {{#WordPOS}}
-    <div class="pos">{{WordPOS}}</div>
-    {{/WordPOS}}
+    <div class="meta">
+      {{#WordPOS}}
+      <div class="pill">{{WordPOS}}</div>
+      {{/WordPOS}}
+    </div>
   </div>
 
   <div class="translation-container">
