refactor: enhance audio handling in card layout and update CSV structure for improved data representation

--- a/card/back.html
+++ b/card/back.html
@@ -1,9 +1,12 @@
 <div class="container back">
   <div class="example-sentence-container">
     <div class="example-sentence">{{cloze:ExampleSentence}}</div>
-    <span style="display: none"
-      >{{tts it_IT voices=AwesomeTTS:cloze:ExampleSentence}}</span
-    >
+    {{#Audio}}
+    <div class="audio">{{Audio}}</div>
+    {{/Audio}} {{^Audio}}
+    <div class="audio">{{tts it_IT voices=AwesomeTTS:TTSSentence}}</div>
+    {{/Audio}}
+
     <div class="meta">
       {{#WordPOS}}
       <div class="pill">{{WordPOS}}</div>
